--- a/interfaces/IPlonkVerifier.html
+++ b/interfaces/IPlonkVerifier.html
@@ -145,17 +145,19 @@
 </code></pre>
 <p>Batch verify multiple TurboPlonk proofs.</p>
 <h3 id="parameters"><a class="header" href="#parameters">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>verifyingKeys</code></td><td style="text-align: left">struct IPlonkVerifier.VerifyingKey[]</td><td style="text-align: left">An array of verifying keys</td></tr>
 <tr><td style="text-align: left"><code>publicInputs</code></td><td style="text-align: left">uint256[][]</td><td style="text-align: left">A two-dimensional array of public inputs.</td></tr>
 <tr><td style="text-align: left"><code>proofs</code></td><td style="text-align: left">struct IPlonkVerifier.PlonkProof[]</td><td style="text-align: left">An array of Plonk proofs</td></tr>
 <tr><td style="text-align: left"><code>extraTranscriptInitMsgs</code></td><td style="text-align: left">bytes[]</td><td style="text-align: left">An array of bytes from</td></tr>
 <tr><td style="text-align: left">transcript initialization messages</td><td style="text-align: left"></td><td style="text-align: left"></td></tr>
 </tbody></table>
+</div>
 <h3 id="return-values"><a class="header" href="#return-values">Return Values</a></h3>
-<table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">struct IPlonkVerifier.VerifyingKey[]</td><td style="text-align: left">A boolean that is true for successful verification, false otherwise</td></tr>
 </tbody></table>
+</div>
 <hr />
 
                     </main>
