--- a/AssetRegistry.html
+++ b/AssetRegistry.html
@@ -149,13 +149,15 @@
 <p>Fetch the ERC-20 token address corresponding to the
 given asset definition.</p>
 <h3 id="parameters"><a class="header" href="#parameters">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>assetDefinition</code></td><td style="text-align: left">struct AssetRegistry.AssetDefinition</td><td style="text-align: left">an asset definition</td></tr>
 </tbody></table>
+</div>
 <h3 id="return-values"><a class="header" href="#return-values">Return Values</a></h3>
-<table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">struct AssetRegistry.AssetDefinition</td><td style="text-align: left">ERC-20 address</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="iscapeassetregistered"><a class="header" href="#iscapeassetregistered">isCapeAssetRegistered</a></h2>
 <pre><code class="language-solidity">  function isCapeAssetRegistered(
@@ -164,13 +166,15 @@ given asset definition.</p>
 </code></pre>
 <p>Is the given asset definition registered?</p>
 <h3 id="parameters-1"><a class="header" href="#parameters-1">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>assetDefinition</code></td><td style="text-align: left">struct AssetRegistry.AssetDefinition</td><td style="text-align: left">an asset definition</td></tr>
 </tbody></table>
+</div>
 <h3 id="return-values-1"><a class="header" href="#return-values-1">Return Values</a></h3>
-<table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">struct AssetRegistry.AssetDefinition</td><td style="text-align: left">if the asset type is registered, false otherwise.</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="sponsorcapeasset"><a class="header" href="#sponsorcapeasset">sponsorCapeAsset</a></h2>
 <pre><code class="language-solidity">  function sponsorCapeAsset(
@@ -182,10 +186,11 @@ given asset definition.</p>
 ERC-20 token. Will revert if the asset type is already
 registered or the ERC-20 token address is zero.</p>
 <h3 id="parameters-2"><a class="header" href="#parameters-2">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>erc20Address</code></td><td style="text-align: left">address</td><td style="text-align: left">An ERC-20 token address</td></tr>
 <tr><td style="text-align: left"><code>newAsset</code></td><td style="text-align: left">struct AssetRegistry.AssetDefinition</td><td style="text-align: left">An asset type to be registered in the contract</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="_checkforeignassetcode"><a class="header" href="#_checkforeignassetcode">_checkForeignAssetCode</a></h2>
 <pre><code class="language-solidity">  function _checkForeignAssetCode(
@@ -200,12 +205,13 @@ not correctly derived from the ERC-20 address of the token and
 the address of the sponsor.</p>
 <p>Requires &quot;view&quot; to access msg.sender.</p>
 <h3 id="parameters-3"><a class="header" href="#parameters-3">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>assetDefinitionCode</code></td><td style="text-align: left">uint256</td><td style="text-align: left">The code of an asset definition</td></tr>
 <tr><td style="text-align: left"><code>erc20Address</code></td><td style="text-align: left">address</td><td style="text-align: left">The ERC-20 address bound to the asset definition</td></tr>
 <tr><td style="text-align: left"><code>sponsor</code></td><td style="text-align: left">address</td><td style="text-align: left">The sponsor address of this wrapped asset</td></tr>
 <tr><td style="text-align: left"><code>policy</code></td><td style="text-align: left">struct AssetRegistry.AssetPolicy</td><td style="text-align: left">asset policy</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="_checkdomesticassetcode"><a class="header" href="#_checkdomesticassetcode">_checkDomesticAssetCode</a></h2>
 <pre><code class="language-solidity">  function _checkDomesticAssetCode(
@@ -215,10 +221,11 @@ the address of the sponsor.</p>
 </code></pre>
 <p>Checks if the asset definition code is correctly derived from the internal asset code.</p>
 <h3 id="parameters-4"><a class="header" href="#parameters-4">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>assetDefinitionCode</code></td><td style="text-align: left">uint256</td><td style="text-align: left">asset definition code</td></tr>
 <tr><td style="text-align: left"><code>internalAssetCode</code></td><td style="text-align: left">uint256</td><td style="text-align: left">internal asset code</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="_computeassetdescription"><a class="header" href="#_computeassetdescription">_computeAssetDescription</a></h2>
 <pre><code class="language-solidity">  function _computeAssetDescription(
@@ -230,15 +237,17 @@ the address of the sponsor.</p>
 <p>Compute the asset description from the address of the
 ERC-20 token and the address of the sponsor.</p>
 <h3 id="parameters-5"><a class="header" href="#parameters-5">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>erc20Address</code></td><td style="text-align: left">address</td><td style="text-align: left">address of the erc20 token</td></tr>
 <tr><td style="text-align: left"><code>sponsor</code></td><td style="text-align: left">address</td><td style="text-align: left">address of the sponsor</td></tr>
 <tr><td style="text-align: left"><code>policy</code></td><td style="text-align: left">struct AssetRegistry.AssetPolicy</td><td style="text-align: left">asset policy</td></tr>
 </tbody></table>
+</div>
 <h3 id="return-values-2"><a class="header" href="#return-values-2">Return Values</a></h3>
-<table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">address</td><td style="text-align: left">asset description</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h1 id="events"><a class="header" href="#events">Events</a></h1>
 <h2 id="assetsponsored"><a class="header" href="#assetsponsored">AssetSponsored</a></h2>
