--- a/RootStore.html
+++ b/RootStore.html
@@ -142,9 +142,10 @@
 </code></pre>
 <p>Create a root store.</p>
 <h3 id="parameters"><a class="header" href="#parameters">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>nRoots</code></td><td style="text-align: left">uint64</td><td style="text-align: left">The maximum number of roots to store</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="_addroot"><a class="header" href="#_addroot">_addRoot</a></h2>
 <pre><code class="language-solidity">  function _addRoot(
@@ -153,9 +154,10 @@
 </code></pre>
 <p>Add a root value. Only keep the latest nRoots ones.</p>
 <h3 id="parameters-1"><a class="header" href="#parameters-1">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>newRoot</code></td><td style="text-align: left">uint256</td><td style="text-align: left">The value of the new root</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="_containsroot"><a class="header" href="#_containsroot">_containsRoot</a></h2>
 <pre><code class="language-solidity">  function _containsRoot(
@@ -164,13 +166,15 @@
 </code></pre>
 <p>Is the root value contained in the store?</p>
 <h3 id="parameters-2"><a class="header" href="#parameters-2">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>root</code></td><td style="text-align: left">uint256</td><td style="text-align: left">The root value to find</td></tr>
 </tbody></table>
+</div>
 <h3 id="return-values"><a class="header" href="#return-values">Return Values</a></h3>
-<table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Returns</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">uint256</td><td style="text-align: left">True if the root value is in the store, false otherwise</td></tr>
 </tbody></table>
+</div>
 <hr />
 <h2 id="_checkcontainsroot"><a class="header" href="#_checkcontainsroot">_checkContainsRoot</a></h2>
 <pre><code class="language-solidity">  function _checkContainsRoot(
@@ -179,9 +183,10 @@
 </code></pre>
 <p>Raise an exception if the root is not present in the store.</p>
 <h3 id="parameters-3"><a class="header" href="#parameters-3">Parameters</a></h3>
-<table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>root</code></td><td style="text-align: left">uint256</td><td style="text-align: left">The required root value</td></tr>
 </tbody></table>
+</div>
 <hr />
 
                     </main>
